Improve code slightly