@@ -2,7 +2,9 @@ package com.msc.serverbrowser.gui.controllers.implementations;
 
 import java.io.File;
 import java.io.IOException;
+import java.net.MalformedURLException;
 import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Paths;
@@ -36,8 +38,7 @@ import javafx.scene.layout.StackPane;
 import javafx.util.Duration;
 
 /**
- * Controls the Files view which allows you to look at your taken screenshots,
- * your chatlogs and
+ * Controls the Files view which allows you to look at your taken screenshots, your chatlogs and
  * your saved positions.
  *
  * @author Marcel
@@ -47,28 +48,25 @@ public class FilesController implements ViewController
 {
 	// Screenshots
 	@FXML
-	private StackPane						imageContainer;
+	private StackPane		imageContainer;
 	@FXML
-	private ComboBox<File>					screenshotComboBox;
+	private ComboBox<File>	screenshotComboBox;
 	@FXML
-	private Label							takenValue;
+	private Label			takenValue;
 	@FXML
-	private Label							sizeValue;
+	private Label			sizeValue;
 
-	private File							presentImage;
-	private final ObservableList<File>		screenshots		= FXCollections.observableArrayList();
+	private File						presentImage;
+	private final ObservableList<File>	screenshots	= FXCollections.observableArrayList();
 
 	/**
 	 * Compares {@link File files} depending against their last modified date.
 	 */
-	private static final Comparator<File>	fileComparator	= (fileOne, fileTwo) -> new Long(fileOne.lastModified())
-			.compareTo(new Long(fileTwo.lastModified()));
-
-	// Saved Positions
+	private static final Comparator<File> fileComparator = (fileOne, fileTwo) -> new Long(fileOne.lastModified()).compareTo(new Long(fileTwo.lastModified()));
 
 	// Chatlogs
 	@FXML
-	private TextArea						contentTextArea;
+	private TextArea contentTextArea;
 
 	@Override
 	public void initialize()
@@ -165,19 +163,32 @@ public class FilesController implements ViewController
 
 	private void loadPresentImage()
 	{
-		imageContainer.setStyle("-fx-background-image: url(\"" + pathToImage(presentImage.getAbsoluteFile()) + "\");");
-		sizeValue.setText(StringUtil.humanReadableByteCount(presentImage.length()));
-		final Instant timeAsInstant = Instant.ofEpochMilli(presentImage.lastModified());
-		final LocalDateTime localDateTime = LocalDateTime.ofInstant(timeAsInstant, ZoneId.systemDefault());
-		final String localDateTimeFormatted = DateTimeFormatter.ofLocalizedDateTime(FormatStyle.MEDIUM)
-				.format(localDateTime);
-		takenValue.setText(localDateTimeFormatted);
+		Optional<URI> pathToImage = Optional.empty();
+		try
+		{
+			pathToImage = Optional.of(pathToImage(presentImage.getAbsoluteFile()));
+		}
+		catch (final MalformedURLException | URISyntaxException exception)
+		{
+			Logging.logger().log(Level.WARNING, "Couldn't load image: " + presentImage.getAbsoluteFile(), exception);
+		}
 
-		Platform.runLater(() ->
-		{// Getting IndexOutOfBound Exceptions otherwise
-			updateComboBoxContent();
-			screenshotComboBox.setValue(presentImage);
-		});
+		if (pathToImage.isPresent())
+		{
+			imageContainer.setStyle("-fx-background-image: url(\"" + pathToImage + "\");");
+			sizeValue.setText(StringUtil.humanReadableByteCount(presentImage.length()));
+			final Instant timeAsInstant = Instant.ofEpochMilli(presentImage.lastModified());
+			final LocalDateTime localDateTime = LocalDateTime.ofInstant(timeAsInstant, ZoneId.systemDefault());
+			final String localDateTimeFormatted = DateTimeFormatter.ofLocalizedDateTime(FormatStyle.MEDIUM)
+					.format(localDateTime);
+			takenValue.setText(localDateTimeFormatted);
+
+			Platform.runLater(() ->
+			{// Getting IndexOutOfBound Exceptions otherwise
+				updateComboBoxContent();
+				screenshotComboBox.setValue(presentImage);
+			});
+		}
 	}
 
 	private Optional<File> getNextScreenshot()
@@ -239,20 +250,13 @@ public class FilesController implements ViewController
 	 * @param nextImage
 	 *            the {@link File} to create a {@link URI} for
 	 * @return {@link URI} pointing to the passed {@link File}
+	 * @throws MalformedURLException
+	 * @throws URISyntaxException
 	 */
-	private static URI pathToImage(final File nextImage)
+	private static URI pathToImage(final File nextImage) throws MalformedURLException, URISyntaxException
 	{
-		try
-		{
-			final URL url = new URL("file:/" + nextImage.getAbsolutePath());
-			return new URI(url.getProtocol(), url.getUserInfo(), url.getHost(), url.getPort(), url.getPath(),
-					url.getQuery(), url.getRef());
-		}
-		catch (final Exception exception)
-		{
-			// TODO(MSC) Investigate, if this is a good idea.
-			throw new RuntimeException(exception);
-		}
+		final URL url = new URL("file:/" + nextImage.getAbsolutePath());
+		return new URI(url.getProtocol(), url.getUserInfo(), url.getHost(), url.getPort(), url.getPath(), url.getQuery(), url.getRef());
 	}
 
 	@Override
